# HRM-pipeline

./: .gitignore  Estudo.txt  HUGGINGFACE_UPLOAD.md  Makefile  hrm_projects.json  inspect_ts.py  pretrain.py  pyproject.toml  upload_to_huggingface.py
docs/: HRM_TRAINING_GUIDE.md
frontend/: README_ARCHITECTURE.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/layout/: Sidebar.jsx
frontend/src/components/modals/: ConfirmationModal.jsx  HuggingFaceUploadModal.jsx  ReviewModal.jsx
frontend/src/views/: AutoLabView.jsx  DashboardView.jsx  MigrationView.jsx  SettingsView.jsx  StudioView.jsx
l2j_pipeline/: api.py  ast_parser.py  auto_train.py  behavior_validator.py  build_l2j_dataset_hrm.py  compiler_service.py  docker_sandbox.py  domain_orchestrator.py  generate_synth_dataset.py  hrm_status_api.py  hybrid_migration_engine.py  index_l2j_repo.py  l2j_dataset.py  map_dependencies.py  migration_api.py  prepare_guidance_dataset.py  repo_manager.py  rlcoder_adapter.py  test_generator.py  transcribe.py
l2j_pipeline/data/mock_java/: L2Character.java  L2ItemInstance.java  L2Skill.java
models/: layers.py
models/hrm/: hrm_act_v1.py
