[project]
name = "hrm"
version = "0.1.0"
description = "Hierarchical Reasoning Model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adam-atan2>=0.0.3",
    "argdantic>=1.3.3",
    "coolname>=2.2.0",
    "einops>=0.8.1",
    "huggingface-hub>=1.2.3",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pydantic>=2.12.5",
    "torch>=2.0.0",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
    "flash-attn>=2.0.0",
    "openai>=1.0.0",
]


[tool.uv]
managed = true

